# s5d

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: args.rs  main.rs  mode.rs  prelude.rs  tun_guard.rs
client/src/http/: core.rs  data.rs  http.rs  method.rs  mod.rs
client/src/socks5/: config.rs  session.rs
lib/: Cargo.toml
lib/src/: atyp.rs  colorize.rs  config.rs  consts.rs  errors.rs  lib.rs  utils.rs
server/: Cargo.toml
server/src/: args.rs  errors.rs  main.rs  prelude.rs
server/src/socks5/: atyp.rs  config.rs  connection.rs  mod.rs  session.rs
src/: args.rs  colorize.rs  errors.rs  main.rs  prelude.rs  socks5.rs
src/socks5/: addr.rs  atyp.rs  config.rs  connection.rs  parse.rs
tests/: client.rs  integration.rs  integration_test.rs  server.rs
tests/common/: mod.rs
tests/support/: mod.rs  test_client.rs  test_proxy.rs  test_server.rs
