[package]
name = "s5d"
description = "SOCKS5 proxy server"
version = "0.2.0"
edition = "2024"
authors = ["Podvoyskiy Ilya <ilya.podvoyskiy@gmail.com>"]
license = "MIT"
repository = "https://github.com/podvoyskiy/s5d"
readme = "README.md"
keywords = ["socks5", "proxy", "cli"]
rust-version = "1.95.0"

[dependencies]
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "io-util"] }
