[workspace]
resolver = "2"
members = ["server", "client", "lib"]

[workspace.package]
edition = "2024"
authors = ["Podvoyskiy Ilya <ilya.podvoyskiy@gmail.com>"]
license = "MIT"
repository = "https://github.com/podvoyskiy/s5d"
readme = "README.md"
keywords = ["socks5", "proxy", "cli"]
rust-version = "1.95.0"

[workspace.dependencies]
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.23"

s5d-lib = { path = "lib", version = "0.1.0" }