[package]
name = "s5d-client"
version = "0.1.0"
description = "SOCKS5 client"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

s5d-lib = { workspace = true }

[[bin]]
name = "s5d-client"
path = "src/main.rs"
test = true

[[test]]
name = "integration" 
path = "../tests/integration.rs"