[package]
name = "s5d-lib"
version = "0.1.0"
description = "SOCKS5 library for s5d & s5d-client crates"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }

url = "2.5.8"
