[package]
name = "s5d"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

s5d-lib = { workspace = true }

[[bin]]
name = "s5d"
path = "src/main.rs"
test = true

[[test]]
name = "integration"
path = "../tests/integration.rs"