[package]
name = "s5d"
version = "0.3.1"
description = "SOCKS5 proxy server"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

s5d-lib = { workspace = true }

[[bin]]
name = "s5d"
path = "src/main.rs"
test = true

[[test]]
name = "server"
path = "../tests/server.rs"